// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input.svelte > should render "boolean" 1`] = `
<div>
  <!---->
  <!---->
  <checkbox
    aria-checked="unchecked"
    aria-disabled="false"
    class="checkbox flex cursor-pointer select-none items-center leading-loose "
    role="checkbox"
    tabindex="0"
  >
    <input
      hidden=""
      name="foo"
      type="checkbox"
    />
     
    <icon
      class="checkbox-unchecked"
    />
  </checkbox>
  
  
  
</div>
`;

exports[`Input.svelte > should render "checkbox" 1`] = `
<div>
  <!---->
  <!---->
  <checkbox
    aria-checked="unchecked"
    aria-disabled="false"
    class="checkbox flex cursor-pointer select-none items-center leading-loose "
    role="checkbox"
    tabindex="0"
  >
    <input
      hidden=""
      name="foo"
      type="checkbox"
    />
     
    <icon
      class="checkbox-unchecked"
    />
  </checkbox>
  
  
  
</div>
`;

exports[`Input.svelte > should render "color" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="color"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "date" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="date"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "date-time" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="datetime-local"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "email" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="email"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "enum" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col "
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <!---->
  </input-select>
  <!---->
  
  
  
</div>
`;

exports[`Input.svelte > should render "file" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="file"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "integer" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="number"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "month" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="month"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "number" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="number"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "password" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="password"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "phone" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="tel"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "radio" 1`] = `
<div>
  <!---->
  <!---->
  <radio-group
    class="flex cursor-pointer select-none flex-col "
  >
    <label
      class="flex flex-row items-center gap-2"
    >
      <input
        hidden=""
        name="foo"
        type="radio"
        value="foo"
      />
       
      <icon
        class="radio-off"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2"
    >
      <input
        hidden=""
        name="foo"
        type="radio"
        value="bar"
      />
       
      <icon
        class="radio-off"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2"
    >
      <input
        hidden=""
        name="foo"
        type="radio"
        value="baz"
      />
       
      <icon
        class="radio-off"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
  
  
</div>
`;

exports[`Input.svelte > should render "range" 1`] = `
<div>
  <!---->
  <!---->
  <!---->
  <input-range
    class="relative grid h-10 grid-rows-2 "
  >
    <input
      name="foo"
      type="hidden"
      value="0,"
    />
     
    <range-track
      class="relative grid svelte-dg871c"
    >
      <range-track-bar
        class="relative col-start-2 box-border"
      />
       
      <selected-bar
        class="absolute col-start-2"
        style="left: 0px; width: 0px;"
      />
       
      <!---->
       
      <thumb
        aria-valuemax="0"
        aria-valuemin="0"
        class="absolute -top-1 box-border h-4 w-4 cursor-pointer"
        role="slider"
        style="left: 0px;"
        tabindex="0"
      />
      <!---->
    </range-track>
     
    <ticks
      class="svelte-dg871c"
      style="--count: 10;"
    >
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          0
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          10
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          20
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          30
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          40
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          50
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          60
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          70
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          80
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          90
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          100
        </p>
      </tick>
      
    </ticks>
  </input-range>
  
  
  
  
</div>
`;

exports[`Input.svelte > should render "range-min-max" 1`] = `
<div>
  <!---->
  <!---->
  <!---->
  <input-range
    class="relative grid h-10 grid-rows-2 "
  >
    <input
      name="foo"
      type="hidden"
      value="0,100"
    />
     
    <range-track
      class="relative grid svelte-dg871c"
    >
      <range-track-bar
        class="relative col-start-2 box-border"
      />
       
      <selected-bar
        class="absolute col-start-2"
        style="left: 0px; width: 0px;"
      />
       
      <thumb
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="0"
        class="absolute -top-1 box-border h-4 w-4 cursor-pointer"
        role="slider"
        style="left: 0px;"
        tabindex="0"
      />
      <!---->
       
      <thumb
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="100"
        class="absolute -top-1 box-border h-4 w-4 cursor-pointer"
        role="slider"
        style="left: 0px;"
        tabindex="0"
      />
      <!---->
    </range-track>
     
    <ticks
      class="svelte-dg871c"
      style="--count: 10;"
    >
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          0
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          10
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          20
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          30
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          40
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          50
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          60
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          70
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          80
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          90
        </p>
      </tick>
      <tick
        aria-selected="false"
        class="grid cursor-pointer select-none grid-cols-2"
        role="option"
        tabindex="0"
      >
        <tick-bar
          class="h-5px col-start-2 border-l"
        />
         
        <p
          class="col-span-2 flex justify-center"
        >
          100
        </p>
      </tick>
      
    </ticks>
  </input-range>
  
  
  
  
</div>
`;

exports[`Input.svelte > should render "rating" 1`] = `
<div>
  <!---->
  <!---->
  <rating
    class="flex cursor-pointer select-none"
    role="radiogroup"
    tabindex="0"
  >
    <input
      hidden=""
      max="10"
      min="0"
      name="foo"
      type="number"
    />
    <!---->
     
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 1 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 2 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 3 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 4 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 5 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 6 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 7 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 8 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 9 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 10 out of 10"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <!---->
  </rating>
  
  
  
</div>
`;

exports[`Input.svelte > should render "select" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col "
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <!---->
  </input-select>
  <!---->
  
  
  
</div>
`;

exports[`Input.svelte > should render "string" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="text"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "switch" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="hidden"
    value=""
  />
   
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center "
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        foo
      </p>
      <!---->
      
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        bar
      </p>
      <!---->
      
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="2"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        baz
      </p>
      <!---->
      
      <!---->
    </item>
    
  </toggle-switch>
  
  <!---->
  
  
  
</div>
`;

exports[`Input.svelte > should render "tel" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="tel"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "text" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="text"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "text-area" 1`] = `
<div>
  <!---->
  <!---->
  <textarea
    name="foo"
    type="week"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "time" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="time"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "url" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="url"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render "week" 1`] = `
<div>
  <!---->
  <!---->
  <input
    name="foo"
    type="week"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render different input on type change 1`] = `
<div>
  <!---->
  <!---->
  <input
    type="text"
  />
  
  
  
</div>
`;

exports[`Input.svelte > should render different input on type change 2`] = `
<div>
  <!---->
  <!---->
  <input
    type="number"
  />
  
  
  
</div>
`;
